Stop passing the removed -Djava.security.manager flag to the jar
JDK 24+ (JEP 486) permanently removed the Security Manager API, so on
hosts running a current JDK the flag made the jar's JVM fail to start
immediately. Its "Error occurred during initialization of VM" message
landed on stdout and was then fed to the RDF parser as if it were
query output, causing a WorkflowExecutionException on every run. The
policy file it required granted blanket read/write access anyway, so
it provided no real sandboxing to begin with.

_run_query now also treats a non-zero jar exit code as an error, so
any future JVM/CLI-level failure is caught before being handed to the
RDF parser, regardless of which stream it was written to.